updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 21 year old student taking some time off to pursue web development from a different approach.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Tennessee but moved to Dallas at a young age.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy reading and exploring.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would like to be a full stack developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in south Austin</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think it is a skill that will help me in my career and is something that is valued highly.</p>
     </section>
 
     <footer id="footer">
